# advent-of-code-2020

./: pyproject.toml
aoc/day1/: numbers.py
aoc/day3/: README.md
day-1/: README.md
day-2/: README.md
day-3/: main.py
day01/: numbers.py
day02/: main.py
day03/: main.py
day05/: README.md
day06/: README.md
day07/: main.py  specs.json
day08/: main.py
day22/: README.md  main.py
day23/: README.md  main.py
day24/: README.md  main.py
day25/: main.py
day4/: README.md  policies.py  test_policies.py
day5/: main.py
day6/: main.py
day7/: README.md  main.py
day8/: README.md  main.py
day9/: README.md  main.py
quiz-2/: specs.json
