[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["Felix <zen9.felix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toolz = "^0.11.1"
returns = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
